# Nucleo-SimpleFOC

./: .mxproject  Makefile  Nucleo-SimpleFOC.ioc  README.md
Application/: CMakeLists.txt
Application/Inc/: BLDCMotor.h  SimpleFOC.h
Application/Inc/common/: foc_utils.h  micros.h  time_utils.h
Application/Inc/common/base_classes/: BLDCDriver.h  CurrentSense.h  FOCDriver.h  FOCMotor.h  Sensor.h
Application/Inc/current_sense/: GenericCurrentSense.h  InlineCurrentSense.h  LowsideCurrentSense.h  hardware_api.h
Application/Inc/drivers/: BLDCDriver3PWM.h  hardware_api.h
Application/Inc/sensors/: MagneticSensorSPI.h
Application/Src/: BLDCMotor.cpp
Application/Src/common/: time_utils.cpp
Application/Src/common/base_classes/: CurrentSense.cpp  FOCMotor.cpp  Sensor.cpp
Application/Src/current_sense/: GenericCurrentSense.cpp  InlineCurrentSense.cpp  LowsideCurrentSense.cpp
Application/Src/drivers/: BLDCDriver3PWM.cpp
Application/Src/sensors/: MagneticSensorSPI.cpp
Core/Inc/: adc.h  gpio.h  main.h  main_exec.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
Core/Src/: adc.c  eth.c  gpio.c  main.c  main_exec.cpp  spi.c  stm32f7xx_it.c  syscalls.c  tim.c
