# cmake_minimum_required(VERSION 3.22)

# project(application)

# # Enable CMake support for ASM and C languages
# enable_language(C ASM)

# file(GLOB SRC Src/*.cpp Src/*/*.cpp)

# add_library(application STATIC ${SRC})

# target_include_directories(application INTERFACE
#     Inc
# )

# # Validate that application code is compatible with C standard
# if(CMAKE_C_STANDARD LESS 11)
#     message(ERROR "Generated code requires C11 or higher")
# endif()


